2009-11-30  Juri Linkov  <juri@jurta.org>

	* misearch.el (multi-isearch-read-buffers)
	(multi-isearch-read-matching-buffers): New functions.
	(multi-isearch-buffers, multi-isearch-buffers-regexp):
	Use them in the `interactive' spec.  Doc fix.
	(multi-isearch-read-files, multi-isearch-read-matching-files):
	New functions.
	(multi-isearch-files, multi-isearch-files-regexp):
	Use them in the `interactive' spec.  Doc fix.  (Bug#4725)

2009-11-30  Juri Linkov  <juri@jurta.org>

	* doc-view.el (doc-view-continuous):
	Rename from `doc-view-continuous-mode'.
	(doc-view-menu): Move "Toggle display" to the top.
	Add submenu "Continuous" with radio buttons "Off"/"On"
	and "Save as Default".
	(doc-view-scroll-up-or-next-page)
	(doc-view-scroll-down-or-previous-page)
	(doc-view-next-line-or-next-page)
	(doc-view-previous-line-or-previous-page): Rename
	`doc-view-continuous-mode' to `doc-view-continuous'.  (Bug#4896)

2009-11-30  Juri Linkov  <juri@jurta.org>

	* comint.el (comint-mode-map): Rebind `M-r' from
	`comint-previous-matching-input' to
	`comint-history-isearch-backward-regexp'.
	Unbind `M-s' to allow global key binding `M-s'.
	Add menu items for `comint-history-isearch-backward' and
	`comint-history-isearch-backward-regexp'.  (Bug#3746)

2009-11-30  Juri Linkov  <juri@jurta.org>

	* replace.el (perform-replace): Let-bind recenter-last-op to nil.
	For def=recenter, replace `recenter' with `recenter-top-bottom'
	that is called with `this-command' and `last-command' let-bound
	to `recenter-top-bottom'.  When the last `def' was not `recenter',
	set `recenter-last-op' to nil.  (Bug#4981)

2009-11-30  Stefan Monnier  <monnier@iro.umontreal.ca>

	Minor cleanup and simplification.
	* filecache.el (file-cache-add-directory)
	(file-cache-add-directory-recursively)
	(file-cache-add-from-file-cache-buffer)
	(file-cache-delete-file-regexp, file-cache-delete-directory)
	(file-cache-files-matching-internal, file-cache-display): Use dolist.